# wan3-poetry

./: pyproject.toml  sandbox.py
tests/: test_wan3.py
wan3/: __init__.py  algorithms.py  sandbox.py
