[tool.poetry]
name = "wan3"
version = "2.2.0"
description = ""
authors = ["Wannes Lint <contact@wanneslint.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
